--- a/project/index.html
+++ b/project/index.html
@@ -7,7 +7,7 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div class="light"></div>
     <script type="module" src="./js/main.js"></script>
   </body>
 </html>
