started and card kinda made in html

--- a/project/index.html
+++ b/project/index.html
@@ -8,6 +8,11 @@
   </head>
   <body>
     <div class="light"></div>
+    <div class="flex-wrapper">
+      <div class="card">
+        <h2>Big Boy Jeans</h2>
+      </div>
+    </div>
     <script type="module" src="./js/main.js"></script>
   </body>
 </html>
