array of cards done

--- a/project/index.html
+++ b/project/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="stylesheet" href="./style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
@@ -12,13 +13,9 @@
       <div class="card">
         <h2>Big Boy Jeans</h2>
         <img class="card-img" src="https://www.consortium.co.uk/media/catalog/product/cache/1/image/1000x/af097278c5db4767b0fe9bb92fe21690/p/o/polar-skate-co-big-boy-denim-jeans-dark-blue-psc-f20-bigboyjeans-dblu_0000_cat.jpg" alt="">
-       <p class="desc"> Type_of_clothes: jeans</p>
-       <p class="desc">color: blue</p>
-       <p class="desc">name_of_peice: Big Boy jeans</p>
-       <p class="desc">seller: Polar Skate Co.</p> 
-       <p class="desc">style: street wear, skater</p>
-       <p class="desc"> Price_in_usd: 120</p>
-       <p class="desc">owned_by_me: true</p>
+       <p class="desc"> Type of clothes: jeans</p>
+       <p class="desc">name of peice: Big Boy jeans</p>
+       <p>  seller: Polar Skate Co.</p>
       </div>
     </div>
     <script type="module" src="./js/main.js"></script>
