--- a/project/index.html
+++ b/project/index.html
@@ -9,14 +9,10 @@
   </head>
   <body>
     <div class="light"></div>
+    <button id="skater">skater</button>
+    <button id="hype">hype beast</button>
     <div class="flex-wrapper">
-      <div class="card">
-        <h2>Big Boy Jeans</h2>
-        <img class="card-img" src="https://www.consortium.co.uk/media/catalog/product/cache/1/image/1000x/af097278c5db4767b0fe9bb92fe21690/p/o/polar-skate-co-big-boy-denim-jeans-dark-blue-psc-f20-bigboyjeans-dblu_0000_cat.jpg" alt="">
-       <p class="desc"> Type of clothes: jeans</p>
-       <p class="desc">name of peice: Big Boy jeans</p>
-       <p>  seller: Polar Skate Co.</p>
-      </div>
+
     </div>
     <script type="module" src="./js/main.js"></script>
   </body>
