cards part done

--- a/project/index.html
+++ b/project/index.html
@@ -11,6 +11,7 @@
     <div class="light"></div>
     <button id="skater">skater</button>
     <button id="hype">hype beast</button>
+    <button id="all">All Clothes</button>
     <div class="flex-wrapper">
 
     </div>
