--- a/project/index.html
+++ b/project/index.html
@@ -8,10 +8,12 @@
     <title>Vite App</title>
   </head>
   <body>
+    <div class="flex_wrapper">    <h1>Some Cool Clothes</h1></div>
+
     <div class="light"></div>
     <button id="skater">skater</button>
     <button id="hype">hype beast</button>
-    <button id="all">All Clothes</button>
+    <button id="all">all clothes</button>
     <div class="flex-wrapper">
 
     </div>
