--- a/project/index.html
+++ b/project/index.html
@@ -1,22 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
-  <body>
-    <div class="flex_wrapper">    <h1>Some Cool Clothes</h1></div>
-
-    <div class="light"></div>
-    <button id="skater">skater</button>
-    <button id="hype">hype beast</button>
-    <button id="all">all clothes</button>
-    <div class="flex-wrapper">
-
+  <body class="dark">
+    <div class="flex_wrapper"><h1>Some Cool Clothes</h1></div>
+      <button id="skater">skater</button>
+      <button id="hype">hype beast</button>
+      <button id="all">all clothes</button>
+      <button id="change_theme">Change Theme</button>
     </div>
+
+    <div class="flex-wrapper"></div>
     <script type="module" src="./js/main.js"></script>
   </body>
 </html>
